--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "build": "tsc",
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js",
-    "test": "node --test dist/test/*.js"
+    "test": "node --test dist/test/*.js",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "format": "prettier --write src/**/*.ts",
+    "format:check": "prettier --check src/**/*.ts"
   },
-  "keywords": ["mcp", "develocity", "gradle"],
+  "keywords": [
+    "mcp",
+    "develocity",
+    "gradle"
+  ],
   "author": "",
   "license": "Apache-2.0",
   "repository": {
@@ -26,6 +34,12 @@
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
+    "prettier": "^3.6.2",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0"
   },
