--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,15 +19,16 @@ jobs:
       with:
         node-version: '22'
         cache: 'npm'
+        registry-url: 'https://registry.npmjs.org'
     
     - name: Install dependencies
       run: npm ci
     
-    - name: Build
-      run: npm run build
-    
     - name: Run tests
       run: npm test
+    
+    - name: Build
+      run: npm run build
     
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v2
@@ -39,29 +40,8 @@ jobs:
         prerelease: false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  publish:
-    needs: release
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
-    
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Use Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '22'
-        cache: 'npm'
-        registry-url: 'https://registry.npmjs.org'
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Build
-      run: npm run build
     
     - name: Publish to npm
-      run: npm publish
+      run: npm publish --access public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
